--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,11 @@
 	"require" : {
 		"wpackagist-plugin/timber-library" : "1.*",
 		"symfony/finder" : "^3.4",
-		"symfony/var-dumper": "^4.2"
+		"symfony/var-dumper": "^4.2",
+		"symfony/routing": "^4.3",
+		"symfony/http-foundation": "^4.3",
+		"symfony/yaml": "^4.3",
+		"symfony/config": "^4.3"
 	},
 	"autoload" : {
 		"psr-4" : {
