--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 		"symfony/routing": "^4.3",
 		"symfony/http-foundation": "^4.3",
 		"symfony/yaml": "^4.3",
-		"symfony/config": "^4.3"
+		"symfony/config": "^4.3",
+		"doctrine/annotations": "^1.6"
 	},
 	"autoload" : {
 		"psr-4" : {
